# kavita-hermes-recs

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  setup.md  setup.zh-CN.md  usage.md  usage.zh-CN.md
plugin/kavita-recs/: __init__.py  commands.py  config.py  plugin.yaml  tools.py
plugin/kavita-recs/adapter/: __init__.py  client.py
plugin/kavita-recs/recommender/: cron_prompt.py  memory.py  preferences.py  reading_list.py  sync.py  today.py
plugin/kavita-recs/storage/: __init__.py  db.py  schema.sql
scripts/: bootstrap_db.py  install_plugin.py  setup_daily_cron.py  setup_weekly_summary_cron.py
